Removed empty skija renderer